Added Student, Lecturer, Staff Controller
